<resources>
    <string name="app_name">Helper</string>
    <string name="todo">TODO</string>
    <string name="manage_your_task">Manage your task</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="task">Task</string>
    <string name="check_list">CheckList</string>
    <string name="contact">Contact</string>
    <string name="weather">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="friend_name">friend name</string>
    <string name="link">link</string>
    <string name="top_name">top name</string>
    <string name="enter_name">name</string>
    <string name="enter_phone">phone</string>
    <string name="address">address</string>
    <string name="save">Save</string>
    <string name="counter">counter</string>
    <string name="add_item_to_list">add list</string>
    <string name="mounofia">CityName</string>
    <string name="last_update">last update</string>
    <string name="cloudy">cloudy</string>
    <string name="_29_c">29 °C</string>
    <string name="min_26_c">Min 26 ºC</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_text">Are You Sure You Want To Delete This Item OR Undo Deleted It ..</string>
    <string name="sunrise">Sunrise</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="_06_40_am">06:40 AM</string>
    <string name="humidity">Humidity</string>
    <string name="androdocs">AndroDocs</string>
    <string name="created_by">Created By</string>
    <string name="email">email</string>
    <string name="add_more">Add More</string>
    <string name="you_didn_t_have_any_task">You dosn\'t have any task with</string>
    <string name="subject">subject</string>
    <string name="send">Send</string>
    <string name="message">message</string>
    <string name="add_sub_checklist">Add Sub CheckList</string>
    <string name="searching">Searching</string>
    <string name="search_in_tasks">search in tasks</string>
    <string name="search">Search</string>
</resources>