<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weather_CardView"
    android:layout_width="180dp"
    android:layout_height="200dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/Blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="match_parent">

            <TextView
                android:id="@+id/daily_DayName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/mounofia"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp"
                />

        <ImageView
            android:id="@+id/daily_WeatherIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_iconfinder_snowflake"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/daily_DayName"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/daily_WeatherStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/cloudy"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/daily_WeatherTemp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daily_WeatherIcon" />

        <TextView
            android:id="@+id/daily_WeatherTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/_29_c"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/daily_WeatherStatus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>