<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/link_dialog_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <Button
        android:id="@+id/btn_SetLinkDialog"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_one_shape_button"
        android:fontFamily="@font/roboto_light"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
      />

    <Button
        android:id="@+id/btn_ExitLinkDialog"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_one_shape_button"
        android:fontFamily="@font/roboto_light"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="260dp"
        android:background="@drawable/custom_one_shape_button"
        android:padding="15dp"
        android:src="@drawable/ic_iconfinder_link"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:tint="@color/white"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_likeDialog"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:padding="8dp"
        android:hint="@string/link"
        android:inputType="textWebEditText"
        android:textColorHint="@color/Gray"
        android:textColor="@color/White"
        android:textSize="17sp"
        android:maxLines="1"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>