<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.module.weather.WeatherFragment">
    <ImageView
        android:id="@+id/emptyImageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:contentDescription="@string/todo"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_error_image"
        android:visibility="gone"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/parentView"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_CityName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/weather"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_dark_shape"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/infoLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_CityName"
            android:background="@drawable/custom_dark_shape"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_LastUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_update"
                android:textSize="17sp"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_light"
                />

            <ImageView
                android:id="@+id/weather_StatusImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_iconfinder_snowflake"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tv_WeatherStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cloudy"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular"
                />

            <TextView
                android:id="@+id/tv_WeatherTempDegree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_29_c"
                android:textSize="50sp"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_MinTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_26_c"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/roboto_light"
                    app:drawableStartCompat="@drawable/ic_round_expand_more_24"
                    app:drawableTint="@color/White" />

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    />

                <TextView
                    android:id="@+id/tv_MaxTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_26_c"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/roboto_light"
                    app:drawableStartCompat="@drawable/ic_round_expand_less_24"
                    app:drawableTint="@color/White" />

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weatherRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:reverseLayout="false"
            app:layout_constraintTop_toBottomOf="@id/infoLinearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:padding="10dp"
        android:background="@drawable/progressbar_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>

