<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentView"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deleteDialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_dark_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/btn_SetDeleteDialog"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/delete_button_shape"
            android:fontFamily="@font/roboto_light"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            />

        <Button
            android:id="@+id/btn_ExitDeleteDialog"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_one_shape_button"
            android:fontFamily="@font/roboto_light"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="260dp"
            android:background="@drawable/delete_button_shape"
            android:padding="15dp"
            android:outlineSpotShadowColor="@color/purple_500"
            android:src="@drawable/ic_iconfinder_delete"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:tint="@color/white"
            android:contentDescription="@string/todo"
            tools:targetApi="p" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/deleteDialogText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:text="@string/delete_text"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="17dp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>