<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentView"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragment.TaskWithFriendFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_exitTWF"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_iconfinder_left_arrow_back_previous_navigation"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/tv_ShowFriendName"
            app:layout_constraintEnd_toStartOf="@+id/tv_ShowFriendName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_ShowFriendName"
            android:contentDescription="@string/todo"
            app:tint="@color/White" />

        <TextView
            android:id="@+id/tv_ShowFriendName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_dark_shape"
            android:maxLines="1"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toEndOf="@+id/btn_exitTWF" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/twf_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toBottomOf="@id/tv_ShowFriendName"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="15dp"
            android:visibility="visible"
            tools:layout_editor_absoluteX="10dp">

        </androidx.recyclerview.widget.RecyclerView>

        <ImageView
            android:id="@+id/emptyImageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:src="@drawable/ic_empty_box"
            android:visibility="gone"
            android:scaleType="fitCenter"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@id/emptyListText"
            app:layout_constraintTop_toBottomOf="@+id/tv_ShowFriendName"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/emptyListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_didn_t_have_any_task"
            android:textSize="30sp"
            android:textColor="@color/White"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:gravity="center"
            android:visibility="gone"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintTop_toBottomOf="@id/emptyImageView" />

        <LinearLayout
            android:id="@+id/SecondLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_ShowFriendName"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_dark_shape"
                android:drawableStart="@drawable/ic_round_person_outline_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/ColorOrangeNote"
                android:hint="@string/enter_name"
                android:textColor="@color/White"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColorHint="@color/ColorDefaultNote"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_EmailSubject"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_dark_shape"
                android:hint="@string/subject"
                android:textColor="@color/White"
                android:inputType="textEmailSubject"
                android:textColorHint="@color/ColorDefaultNote"
                 />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_EmailMessage"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/custom_dark_shape"
                android:fontFamily="@font/roboto_regular"
                android:gravity="top"
                android:hint="@string/message"
                android:padding="6dp"
                android:textColor="@color/White"
                android:textColorHint="@color/ColorDefaultNote"
                android:textSize="17sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSendEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/custom_one_shape_button"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/SecondLayout" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>